--- a/styles.css
+++ b/styles.css
@@ -15,4 +15,20 @@ body {
   position: relative;
 }
 
-nav .
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav ul li {
+  display: inline-block;
+  list-style-type: none;
+}
+nav ul li a{
+  text-decoration: none;
+  color: red;
+  font-weight: bold;
+  padding: 20px;
+  font-size: 40px;
+  font-style:oblique;
+}
