--- a/styles.css
+++ b/styles.css
@@ -25,52 +25,56 @@ nav ul li {
   list-style-type: none;
   background-color: darkgrey;
 }
-nav ul li a{
+nav ul li a {
   text-decoration: none;
   color: red;
   font-weight: bold;
   padding: 20px;
   font-size: 40px;
-  font-style:oblique;
+  font-style: oblique;
 }
 
-img{
+img {
   height: 150px;
   border-radius: 50%;
-
 }
 
-.p{
+.p {
   display: none;
 }
 
-footer{
+footer {
   margin-top: 150px;
 }
 
 @media only screen and (max-width: 1080px) {
-  img{
+  img {
     height: 100px;
     border-radius: 50%;
-  
   }
 }
 @media only screen and (max-width: 780px) {
-  img{
+  img {
     height: 60px;
     border-radius: 50%;
-  
   }
   nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
   }
-  .heading{
+  .heading {
     font-size: 20px;
   }
-  .heading2{
+  .heading2 {
     font-size: 15px;
+  }
+  nav ul li a {
+    text-decoration: none;
+    color: red;
+    font-weight: bold;
+    padding: 20px;
+    font-size: 20px;
+    font-style: oblique;
   }
 }
